# ai-bricks-v3

./: KANBAN.md  README.md  pyproject.toml
aibricks/: __init__.py  client.py  config.py  connection.py  namespace.py  utils.py
aibricks/middleware/: __init__.py  core.py  logging.py  middleware.py  summary.py  timing.py
aibricks/providers/: __init__.py  arliai_api.py  dummy_api.py  google_api.py  huggingface_api.py  koboldcpp_api.py  llamacpp_api.py  lmstudio_api.py  ollama_api.py  openai_api.py  openrouter_api.py  tabbyapi_api.py  together_api.py  togetherai_api.py  xai_api.py
examples/easy/codegen/: codegen_v1.yaml  codegen_v2.yaml  tool_append.yaml  tool_replace.yaml  tool_write.yaml
examples/easy/game/: characters.yaml  game-v2.yaml  game-v3.yaml  game.py  game.yaml  game_v1.py  game_v2.py  game_v3.py  requirements.txt  v1.py  v2.py  v3.py
examples/easy/worldgen/: v1.py  v2.py  worldgen-v1.yaml  worldgen-v2.yaml  worldgen.yaml  worldgen_v1.py  worldgen_v2.py
providers/: arliai_api.py  koboldcpp_api.py  llamacpp_api.py  lmstudio_api.py  openrouter_api.py  tabbyapi_api.py  xai_api.py
tests/aibricks/config/: test_config.py
tests/aibricks/middleware/: test_logging.py  test_summary.py  test_timing.py
tests/aibricks/namespace/: test_namespace.py
tests/aibricks/providers/: test_client.py  test_connect.py  test_stream.py  test_streaming.py
tests/aibricks/test_data/config/: base.yaml  connections.yaml  include.yaml  variables.yaml
tests/aibricks/utils/: test_lookup.py
